dancexr/menu/2025.4/scene/sky.md
---
locale: en-rUS
layout: single
title: Sky
toc: false
sidebar:
  nav: "docs"
---
[Eng](/dancexr/menu/2025.4/scene/sky) | [繁中](/tw/dancexr/menu/2025.4/scene/sky) | [日本語](/jp/dancexr/menu/2025.4/scene/sky) | [한국어](/kr/dancexr/menu/2025.4/scene/sky) | [简中](/zh/dancexr/menu/2025.4/scene/sky)

[Environment](../menu#Environment) > Sky

SkySetting manages the sky rendering, including sky maps, procedural skies, ambient lighting, and wind effects.

| Setting | Value | Description |
| :--- | --- | :--- |
|<nobr><img src="/images/icon/ic_toggle_on.png" alt="toggle on icon"/> Mode</nobr>| Procedural | Color, Sky Map, Procedural, <br/>Selects the sky rendering mode: Color, Sky Map, or Procedural.
|<nobr><img src="/images/icon/ic_slider.png" alt="slider icon"/> Background</nobr>| [1] (0 ~ 1) | Controls the brightness of the sky when it is rendered.
|<nobr><img src="/images/icon/ic_slider.png" alt="slider icon"/> Sky Ambient</nobr>| [1] (0 ~ 1) | Controls how much the sky affects ambient lighting.
|<nobr><img src="/images/icon/ic_chevron.png" alt="chevron icon"/> Sky Map</nobr>| **[Cloud]** | [Cloud], [Fantasy], [Day], [Studio],  |
|<nobr><img src="/images/icon/ic_slider.png" alt="slider icon"/> Orientation</nobr>| [0] (0 ~ 360) | Sets the rotation of the sky in degrees.
|<nobr><img src="/images/icon/ic_slider.png" alt="slider icon"/> Wind</nobr>| [1] (0 ~ 4) | Global wind speed affecting cloth simulation, particle dynamics, and clouds.
|<nobr><img src="/images/icon/ic_slider.png" alt="slider icon"/> Wind Direction</nobr>| [0] (0 ~ 360) | Sets the global wind direction in degrees.
|<nobr><img src="/images/icon/ic_check_off.png" alt="check off icon"/> Wind Field</nobr>| [OFF] | 
|<nobr><img src="/images/icon/ic_tune.png" alt="tune icon"/> <b>Position</b></nobr>| | Sets the position of the wind field.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> X</nobr>| [0] (Unlimited) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Y</nobr>| [0] (Unlimited) | 
|<nobr><img src="/images/icon/ic_line_l.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Z</nobr>| [0] (Unlimited) | 
|<nobr><img src="/images/icon/ic_tune.png" alt="tune icon"/> <b>Rotation</b></nobr>| | Sets the rotation of the wind field.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> X</nobr>| [0] (Unlimited) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Y</nobr>| [0] (Unlimited) | 
|<nobr><img src="/images/icon/ic_line_l.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Z</nobr>| [0] (Unlimited) | 
|<nobr><img src="/images/icon/ic_slider.png" alt="slider icon"/> Distance</nobr>| [5] (0 ~ 10) | Sets the distance of the wind field.
|<nobr><img src="/images/icon/ic_slider.png" alt="slider icon"/> Radius</nobr>| [1] (0 ~ 2) | Sets the radius of the wind field.
|<nobr><img src="/images/icon/ic_slider.png" alt="slider icon"/> Speed</nobr>| [1] (0 ~ 4) | Sets the speed of the wind field.
|<nobr> <b>Sky Ambient</b></nobr>|| 
|<nobr><img src="/images/icon/ic_tune.png" alt="tune icon"/> <b>Sky Color</b></nobr>| | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_toggle_on.png" alt="toggle on icon"/> Color Mode</nobr>| RGB | RGB, HSV, 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Hue</nobr>| [0] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Satuation</nobr>| [0] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Brightness</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Red</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Green</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Blue</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_check_off.png" alt="check off icon"/> Use Stage Color</nobr>| [OFF] | Use the color from the stage ring
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_check_on.png" alt="check on icon"/> Color Temp</nobr>| [6500] (3000 ~ 8000) | 
|<nobr><img src="/images/icon/ic_line_l.png"/><img src="/images/icon/ic_list.png" alt="list icon"/> Presets</nobr>| **White** | White, Sunset, Red, Yellow, Blue, Green,  |
|<nobr><img src="/images/icon/ic_tune.png" alt="tune icon"/> <b>Middle Color</b></nobr>| | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_toggle_on.png" alt="toggle on icon"/> Color Mode</nobr>| RGB | RGB, HSV, 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Hue</nobr>| [0] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Satuation</nobr>| [0] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Brightness</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Red</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Green</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Blue</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_check_off.png" alt="check off icon"/> Use Stage Color</nobr>| [OFF] | Use the color from the stage ring
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_check_on.png" alt="check on icon"/> Color Temp</nobr>| [6500] (3000 ~ 8000) | 
|<nobr><img src="/images/icon/ic_line_l.png"/><img src="/images/icon/ic_list.png" alt="list icon"/> Presets</nobr>| **White** | White, Sunset, Red, Yellow, Blue, Green,  |
|<nobr><img src="/images/icon/ic_tune.png" alt="tune icon"/> <b>Ground Color</b></nobr>| | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_toggle_on.png" alt="toggle on icon"/> Color Mode</nobr>| RGB | RGB, HSV, 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Hue</nobr>| [0] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Satuation</nobr>| [0] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Brightness</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Red</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Green</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Blue</nobr>| [1] (0 ~ 1) | 
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_check_off.png" alt="check off icon"/> Use Stage Color</nobr>| [OFF] | Use the color from the stage ring
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_check_on.png" alt="check on icon"/> Color Temp</nobr>| [6500] (3000 ~ 8000) | 
|<nobr><img src="/images/icon/ic_line_l.png"/><img src="/images/icon/ic_list.png" alt="list icon"/> Presets</nobr>| **White** | White, Sunset, Red, Yellow, Blue, Green,  |
|<nobr><img src="/images/icon/ic_check_on.png" alt="check on icon"/> <b>Cloud</b></nobr>| | Configures volumetric clouds, including shape, erosion, density, and wind effects.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_check_on.png" alt="check on icon"/> Enable</nobr>| [ON] | Enables or disables volumetric clouds.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Shape Scale</nobr>| [1] (-1 ~ 2) | Controls the scale of the cloud shapes.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Shape Factor</nobr>| [0.8] (0 ~ 1) | Adjusts the shape factor of the clouds.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Erosion Scale</nobr>| [2] (0 ~ 5) | Controls the scale of cloud erosion.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Erosion Factor</nobr>| [0.8] (0 ~ 1) | Adjusts the erosion factor of the clouds.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Density</nobr>| [0.2] (0 ~ 1) | Sets the density multiplier for the clouds.
|<nobr><img src="/images/icon/ic_line_t.png"/><img src="/images/icon/ic_check_off.png" alt="check off icon"/> Shadow</nobr>| [OFF] | Enables or disables cloud shadows.
|<nobr><img src="/images/icon/ic_line_l.png"/><img src="/images/icon/ic_slider.png" alt="slider icon"/> Wind Multiplier</nobr>| [3] (0 ~ 4) | Sets the wind multiplier for cloud movement.
|<nobr><img src="/images/icon/ic_list.png" alt="list icon"/> Presets</nobr>| **Thin Cloud** | Skymap, Procedural, Indoor, Thin Cloud, Cloudy,  |
